Make sure to push a null float containing block for <mtd>.  Bug 399676, r+sr=roc